k8s/cnb-nodejs/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnb-nodejs
  template:
    metadata:
      labels:
        app: cnb-nodejs
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port:  "8080"
    spec:
      containers:
        - image: cnb-nodejs
          name: app
          resources:
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 10
