k8s/cnb-nodejs/base/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: nodejs.withtanzu.com
      http:
        paths:
          - backend:
              serviceName: app
              servicePort: 8080
